--- a/app/project/0/Dockerfile
+++ b/app/project/0/Dockerfile
@@ -1,8 +1,12 @@
 # syntax=docker/dockerfile:1
 FROM python:3.10-slim-buster
+
 ENV PYTHONDONTWRITEBYTECODE=1
 ENV PYTHONUNBUFFERED=1
-WORKDIR /code
-COPY requirements.txt /code/
-RUN pip install -r requirements.txt
-COPY . /code/
+
+WORKDIR /app
+
+COPY requirements.txt .
+RUN pip install --upgrade pip \
+    && pip install -r requirements.txt
+COPY . .
