--- a/app/project/0/devspace.yaml
+++ b/app/project/0/devspace.yaml
@@ -1,27 +1,35 @@
 version: v2beta1
 name: cs50w
 
+# `vars` specifies variables which may be used as ${VAR_NAME} in devspace.yaml
+vars:
+  DEVSPACE_CONTEXT: minikube
+  DEVSPACE_NAMESPACE: cs50w
+  IMAGE: python:3.10-slim-buster
+  PORT: 8000
+
 # This is a list of `pipelines` that DevSpace can execute (you can define your own)
 pipelines:
   # This is the pipeline for the main command: `devspace dev` (or `devspace run-pipeline dev`)
   dev:
     run: |-
-      run_dependencies --all       # 1. Deploy any projects this project needs (see "dependencies")
-      create_deployments --all     # 2. Deploy Helm charts and manifests specfied as "deployments"
-      start_dev app                # 3. Start dev mode "app" (see "dev" section)
+      run_dependencies --all                                      # 1. Deploy any projects this project needs (see "dependencies")
+      create_deployments --all                                    # 2. Deploy Helm charts and manifests specfied as "deployments"
+      start_dev app                                               # 3. Start dev mode "app" (see "dev" section)
   # You can run this pipeline via `devspace deploy` (or `devspace run-pipeline deploy`)
   deploy:
     run: |-
-      run_dependencies --all                            # 1. Deploy any projects this project needs (see "dependencies")
-      build_images --all -t $(git describe --always)    # 2. Build, tag (git commit hash) and push all images (see "images")
-      create_deployments --all                          # 3. Deploy Helm charts and manifests specfied as "deployments"
+      run_dependencies --all                                      # 1. Deploy any projects this project needs (see "dependencies")
+      build_images --all -t $(git describe --always)              # 2. Build, tag (git commit hash) and push all images (see "images")
+      create_deployments --all                                    # 3. Deploy Helm charts and manifests specfied as "deployments"
 
 # This is a list of `images` that DevSpace can build for this project
 # We recommend to skip image building during development (devspace dev) as much as possible
 images:
   app:
-    image: my-image-registry.tld/username/app
+    image: ${IMAGE}
     dockerfile: ./Dockerfile
+    skipPush: true
 
 # This is a list of `deployments` that DevSpace can create for this project
 deployments:
@@ -36,18 +44,18 @@ deployments:
       # You may also use `valuesFiles` to load values from files, e.g. valuesFiles: ["values.yaml"]
       values:
         containers:
-          - image: my-image-registry.tld/username/app
+          - image: ${IMAGE}
         service:
           ports:
-            - port: 8000
+            - port: ${PORT}
 
 # This is a list of `dev` containers that are based on the containers created by your deployments
 dev:
   app:
     # Search for the container that runs this image
-    imageSelector: my-image-registry.tld/username/app
+    imageSelector: ${IMAGE}
     # Replace the container image with this dev-optimized image (allows to skip image building during development)
-    devImage: ghcr.io/loft-sh/devspace-containers/python:3-alpine
+    devImage: ${IMAGE}
     # Sync files between the local filesystem and the development container
     sync:
       - path: ./
@@ -65,12 +73,12 @@ dev:
       - command: git
     # Forward the following ports to be able access your application via localhost
     ports:
-      - port: "8000"
+      - port: ${PORT}
     # Open the following URLs once they return an HTTP status code other than 502 or 503
     open:
-      - url: http://localhost:8000
+      - url: http://localhost:${PORT}
 
-# Use the `commands` section to define repeatable dev workflows for this project 
+# Use the `commands` section to define repeatable dev workflows for this project
 commands:
   migrate-db:
     command: |-
