--- a/app/project/0/pyproject.toml
+++ b/app/project/0/pyproject.toml
@@ -8,6 +8,7 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.10.8"
 sanic = "^22.9.1"
+python-decouple = "^3.6"
 
 [tool.poetry.group.dev.dependencies]
 icecream = "^2.1.3"
