--- a/app/project/0/requirements.txt
+++ b/app/project/0/requirements.txt
@@ -1,8 +1,9 @@
 aiofiles==22.1.0 ; python_full_version >= "3.10.8" and python_version < "4.0"
 httptools==0.5.0 ; python_full_version >= "3.10.8" and python_full_version < "4.0.0"
 multidict==6.0.2 ; python_full_version >= "3.10.8" and python_full_version < "4.0.0"
-sanic==22.9.1 ; python_full_version >= "3.10.8" and python_full_version < "4.0.0"
+python-decouple==3.6 ; python_full_version >= "3.10.8" and python_full_version < "4.0.0"
 sanic-routing==22.8.0 ; python_full_version >= "3.10.8" and python_full_version < "4.0.0"
+sanic==22.9.1 ; python_full_version >= "3.10.8" and python_full_version < "4.0.0"
 ujson==5.5.0 ; sys_platform != "win32" and implementation_name == "cpython" and python_full_version >= "3.10.8" and python_full_version < "4.0.0"
 uvloop==0.17.0 ; sys_platform != "win32" and implementation_name == "cpython" and python_full_version >= "3.10.8" and python_full_version < "4.0.0"
 websockets==10.4 ; python_full_version >= "3.10.8" and python_full_version < "4.0.0"
