--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "wiki"
+name = "cs50w"
 version = "0.1.0"
 description = ""
 authors = ["pythoninthegrass <4097471+pythoninthegrass@users.noreply.github.com>"]
@@ -8,6 +8,9 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "3.10.8"
 Django = "^4.1.3"
+markdown2 = "^2.4.6"
+sanic = "^22.9.1"
+python-decouple = "^3.6"
 
 [tool.poetry.group.dev.dependencies]
 icecream = "^2.1.3"
