--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -10,6 +10,10 @@ repos:
     rev: 22.6.0
     hooks:
     - id: black
+    exclude: |
+        (?x)^(
+            app/project/wiki/encyclopedia/views.py
+        )$
   - repo: https://gitlab.com/pycqa/flake8
     rev: 3.9.2
     hooks:
