--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ Django = "^4.1.3"
 markdown2 = "^2.4.6"
 sanic = "^22.9.1"
 python-decouple = "^3.6"
+django-markdownx = "^3.0.1"
 
 [tool.poetry.dev-dependencies]
 icecream = "^2.1.3"
