--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,12 @@
 aiofiles==22.1.0 ; python_full_version == "3.10.8"
 asgiref==3.5.2 ; python_full_version == "3.10.8"
+django-markdownx==3.0.1 ; python_full_version == "3.10.8"
 django==4.1.3 ; python_full_version == "3.10.8"
 httptools==0.5.0 ; python_full_version == "3.10.8"
 markdown2==2.4.6 ; python_full_version == "3.10.8"
+markdown==3.4.1 ; python_full_version == "3.10.8"
 multidict==6.0.2 ; python_full_version == "3.10.8"
+pillow==9.3.0 ; python_full_version == "3.10.8"
 python-decouple==3.6 ; python_full_version == "3.10.8"
 sanic-routing==22.8.0 ; python_full_version == "3.10.8"
 sanic==22.9.1 ; python_full_version == "3.10.8"
