--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,9 +8,9 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "3.10.8"
 Django = "^4.1.3"
-markdown2 = "^2.4.6"
 sanic = "^22.9.1"
 python-decouple = "^3.6"
+django-markdownx = "^3.0.1"
 
 [tool.poetry.dev-dependencies]
 icecream = "^2.1.3"
