--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ python = "3.10.8"
 Django = "^4.1.3"
 sanic = "^22.9.1"
 python-decouple = "^3.6"
-django-markdownx = "^3.0.1"
+django-markdownx = ">=4.0.0b1"
 
 [tool.poetry.dev-dependencies]
 icecream = "^2.1.3"
