--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,12 @@ django/composeexample/
 django/data/
 django/manage.py
 migrations/
+entries/
+!entries/CSS.md
+!entries/Django.md
+!entries/Git.md
+!entries/HTML.md
+!entries/Python.md
 *.sqlite
 redis*
 !redis.conf.example
