--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ Django = "^4.1.3"
 sanic = "^22.9.1"
 python-decouple = "^3.6"
 django-markdownx = ">=4.0.0b1"
+markdownify = "^0.11.6"
 
 [tool.poetry.dev-dependencies]
 icecream = "^2.1.3"
