--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,12 +6,13 @@ authors = ["pythoninthegrass <4097471+pythoninthegrass@users.noreply.github.com>
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "3.10.8"
+python = "3.10.9"
 Django = "^4.1.3"
 sanic = "^22.9.1"
 python-decouple = "^3.6"
 django-markdownx = ">=4.0.0b1"
 markdownify = "^0.11.6"
+markdown2 = "^2.4.7"
 
 [tool.poetry.dev-dependencies]
 icecream = "^2.1.3"
