--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,21 @@
-aiofiles==22.1.0 ; python_full_version == "3.10.8"
-asgiref==3.6.0 ; python_full_version == "3.10.8"
-beautifulsoup4==4.11.1 ; python_full_version == "3.10.8"
-django-markdownx==4.0.0b1 ; python_full_version == "3.10.8"
-django==4.1.5 ; python_full_version == "3.10.8"
-httptools==0.5.0 ; python_full_version == "3.10.8"
-markdown==3.4.1 ; python_full_version == "3.10.8"
-markdownify==0.11.6 ; python_full_version == "3.10.8"
-multidict==6.0.4 ; python_full_version == "3.10.8"
-pillow==9.4.0 ; python_full_version == "3.10.8"
-python-decouple==3.7 ; python_full_version == "3.10.8"
-sanic-routing==22.8.0 ; python_full_version == "3.10.8"
-sanic==22.12.0 ; python_full_version == "3.10.8"
-six==1.16.0 ; python_full_version == "3.10.8"
-soupsieve==2.3.2.post1 ; python_full_version == "3.10.8"
-sqlparse==0.4.3 ; python_full_version == "3.10.8"
-tzdata==2022.7 ; sys_platform == "win32" and python_full_version == "3.10.8"
-ujson==5.7.0 ; sys_platform != "win32" and implementation_name == "cpython" and python_full_version == "3.10.8"
-uvloop==0.17.0 ; sys_platform != "win32" and implementation_name == "cpython" and python_full_version == "3.10.8"
-websockets==10.4 ; python_full_version == "3.10.8"
+aiofiles==22.1.0 ; python_full_version == "3.10.9"
+asgiref==3.6.0 ; python_full_version == "3.10.9"
+beautifulsoup4==4.11.2 ; python_full_version == "3.10.9"
+django-markdownx==4.0.0b1 ; python_full_version == "3.10.9"
+django==4.1.5 ; python_full_version == "3.10.9"
+httptools==0.5.0 ; python_full_version == "3.10.9"
+markdown2==2.4.7 ; python_full_version == "3.10.9"
+markdown==3.4.1 ; python_full_version == "3.10.9"
+markdownify==0.11.6 ; python_full_version == "3.10.9"
+multidict==6.0.4 ; python_full_version == "3.10.9"
+pillow==9.4.0 ; python_full_version == "3.10.9"
+python-decouple==3.7 ; python_full_version == "3.10.9"
+sanic-routing==22.8.0 ; python_full_version == "3.10.9"
+sanic==22.12.0 ; python_full_version == "3.10.9"
+six==1.16.0 ; python_full_version == "3.10.9"
+soupsieve==2.3.2.post1 ; python_full_version == "3.10.9"
+sqlparse==0.4.3 ; python_full_version == "3.10.9"
+tzdata==2022.7 ; sys_platform == "win32" and python_full_version == "3.10.9"
+ujson==5.7.0 ; sys_platform != "win32" and implementation_name == "cpython" and python_full_version == "3.10.9"
+uvloop==0.17.0 ; sys_platform != "win32" and implementation_name == "cpython" and python_full_version == "3.10.9"
+websockets==10.4 ; python_full_version == "3.10.9"
