--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,7 @@ entries/
 !entries/Git.md
 !entries/HTML.md
 !entries/Python.md
-!entries/Code_Gang.md
+!entries/Code Gang.md
 *.sqlite
 redis*
 !redis.conf.example
