br tag, add edit button to entry pages

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,9 @@ entries/
 !entries/HTML.md
 !entries/Python.md
 !entries/Code Gang.md
+static/
+!static/styles.css
+staticfiles/
 *.sqlite
 redis*
 !redis.conf.example
