--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 aiofiles==22.1.0 ; python_full_version == "3.10.9"
 asgiref==3.6.0 ; python_full_version == "3.10.9"
 beautifulsoup4==4.11.2 ; python_full_version == "3.10.9"
+django-bootstrap-v5==1.0.11 ; python_full_version == "3.10.9"
 django-markdownx==4.0.0b1 ; python_full_version == "3.10.9"
 django==4.1.6 ; python_full_version == "3.10.9"
 httptools==0.5.0 ; python_full_version == "3.10.9"
