--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,20 +3,15 @@ fail_fast: true
 repos:
   # checks for secrets via rules (gitleaks.toml)
   - repo: https://github.com/zricethezav/gitleaks
-    rev: v8.9.0
+    rev: v8.15.3
     hooks:
       - id: gitleaks
   - repo: https://github.com/ambv/black
-    rev: 22.6.0
+    rev: 23.1.0
     hooks:
     - id: black
-    exclude: |
-        (?x)^(
-            app/project/wiki/encyclopedia/util.py|
-            app/project/wiki/encyclopedia/views.py
-        )$
-  - repo: https://gitlab.com/pycqa/flake8
-    rev: 3.9.2
+  - repo: https://github.com/PyCQA/flake8
+    rev: 6.0.0
     hooks:
     - id: flake8
   # - repo: https://github.com/timothycrosley/isort
@@ -24,12 +19,19 @@ repos:
   #   hooks:
   #   - id: isort
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.3.0
+    rev: v4.4.0
     hooks:
     - id: check-yaml
     - id: check-added-large-files
       args: ['--maxkb=1024']
+    - id: check-docstring-first
+      exclude: |
+          (?x)^(
+              hello.py
+          )$
+    - id: check-executables-have-shebangs
     - id: check-merge-conflict
+    - id: check-shebang-scripts-are-executable
     - id: check-symlinks
     - id: check-toml
     - id: check-yaml
