--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,22 @@
-aiofiles==23.1.0 ; python_full_version == "3.10.9"
-asgiref==3.6.0 ; python_full_version == "3.10.9"
-beautifulsoup4==4.11.2 ; python_full_version == "3.10.9"
-django-bootstrap-v5==1.0.11 ; python_full_version == "3.10.9"
-django-markdownx==4.0.0b1 ; python_full_version == "3.10.9"
-django==4.1.7 ; python_full_version == "3.10.9"
-httptools==0.5.0 ; python_full_version == "3.10.9"
-markdown2==2.4.8 ; python_full_version == "3.10.9"
-markdown==3.4.1 ; python_full_version == "3.10.9"
-markdownify==0.11.6 ; python_full_version == "3.10.9"
-multidict==6.0.4 ; python_full_version == "3.10.9"
-pillow==9.4.0 ; python_full_version == "3.10.9"
-python-decouple==3.7 ; python_full_version == "3.10.9"
-sanic-routing==22.8.0 ; python_full_version == "3.10.9"
-sanic==22.12.0 ; python_full_version == "3.10.9"
-six==1.16.0 ; python_full_version == "3.10.9"
-soupsieve==2.4 ; python_full_version == "3.10.9"
-sqlparse==0.4.3 ; python_full_version == "3.10.9"
-tzdata==2022.7 ; sys_platform == "win32" and python_full_version == "3.10.9"
-ujson==5.7.0 ; sys_platform != "win32" and implementation_name == "cpython" and python_full_version == "3.10.9"
-uvloop==0.17.0 ; sys_platform != "win32" and implementation_name == "cpython" and python_full_version == "3.10.9"
-websockets==10.4 ; python_full_version == "3.10.9"
+aiofiles==23.1.0 ; python_version >= "3.10" and python_version < "4.0"
+asgiref==3.6.0 ; python_version >= "3.10" and python_version < "4.0"
+beautifulsoup4==4.12.0 ; python_version >= "3.10" and python_version < "4.0"
+django-bootstrap-v5==1.0.11 ; python_version >= "3.10" and python_version < "4.0"
+django-markdownx==4.0.2 ; python_version >= "3.10" and python_version < "4.0"
+django==4.2 ; python_version >= "3.10" and python_version < "4.0"
+httptools==0.5.0 ; python_version >= "3.10" and python_version < "4.0"
+markdown2==2.4.8 ; python_version >= "3.10" and python_version < "4"
+markdown==3.4.3 ; python_version >= "3.10" and python_version < "4.0"
+markdownify==0.11.6 ; python_version >= "3.10" and python_version < "4.0"
+multidict==6.0.4 ; python_version >= "3.10" and python_version < "4.0"
+pillow==9.5.0 ; python_version >= "3.10" and python_version < "4.0"
+python-decouple==3.8 ; python_version >= "3.10" and python_version < "4.0"
+sanic-routing==22.8.0 ; python_version >= "3.10" and python_version < "4.0"
+sanic==22.12.0 ; python_version >= "3.10" and python_version < "4.0"
+six==1.16.0 ; python_version >= "3.10" and python_version < "4.0"
+soupsieve==2.4 ; python_version >= "3.10" and python_version < "4.0"
+sqlparse==0.4.3 ; python_version >= "3.10" and python_version < "4.0"
+tzdata==2023.3 ; python_version >= "3.10" and python_version < "4.0" and sys_platform == "win32"
+ujson==5.7.0 ; sys_platform != "win32" and implementation_name == "cpython" and python_version >= "3.10" and python_version < "4.0"
+uvloop==0.17.0 ; sys_platform != "win32" and implementation_name == "cpython" and python_version >= "3.10" and python_version < "4.0"
+websockets==11.0 ; python_version >= "3.10" and python_version < "4.0"
