--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = ["pythoninthegrass <4097471+pythoninthegrass@users.noreply.github.com>
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "3.10.9"
+python = "^3.10"
 Django = "^4.1.3"
 sanic = "^22.9.1"
 python-decouple = "^3.6"
