--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,5 @@
 # ETC
-!**/auctions/static/
 django/manage.py
-migrations/
 entries/
 !entries/CSS.md
 !entries/Django.md
@@ -10,7 +8,9 @@ entries/
 !entries/Python.md
 !entries/Code Gang.md
 staticfiles/
-static/
+static/*
+!static/gbv.jpg
+!static/zelda.jpg
 !static/styles.css
 *.sqlite
 redis*
